--- a/pertemuan_6/index.html
+++ b/pertemuan_6/index.html
@@ -15,10 +15,10 @@
     <!-- Header -->
     <div class="header" >
         <ul>
-            <li><a href="#" id="home">Home</a></li>
-            <li><a href="#" id="about">About</a></li>
-            <li><a href="#" id="product">Product</a></li>
-            <li><a href="#" id="service">Service</a></li>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="about.html" id="about">About</a></li>
+            <li><a href="product.html" id="product">Product</a></li>
+            <li><a href="services.html" id="service">Service</a></li>
             <li><a href="contact.html" id="contact">Contact</a></li>
         </ul>
     </div>
